Changed imports of test data in User services tests, renaming of methods, adapting services tests to use test utility data.